# Q4_25_Builder_Rustoshi

./: .gitmodules
AMM/: Anchor.toml  package-lock.json
AMM/programs/anchor-amm-q4-25/src/: lib.rs
AMM/tests/: anchor-amm-q4-25.ts
Marketplace/: Anchor.toml
Marketplace/programs/anchor-marketplace-q4-25/: Cargo.toml
Marketplace/programs/anchor-marketplace-q4-25/src/: lib.rs
Marketplace/programs/anchor-marketplace-q4-25/src/instructions/: delist.rs  initialize.rs  list.rs  purchase.rs
Marketplace/programs/anchor-marketplace-q4-25/src/state/: listing.rs  marketplace.rs
Marketplace/tests/: anchor-marketplace-q4-25.ts
Vault/: Anchor.toml  txtx.yml
Vault/programs/anchor-vault/: Cargo.toml
Vault/runbooks/deployment/: main.tx
airdrop/:  TS Client Logic.md  airdrop.ts  enroll.ts  keygen.ts  package-lock.json  package.json  transfer.ts  wallet-cli.ts
airdrop/programs/: Turbin3_prereq.json
airdrop/scripts/: generate-client.ts
airdrop2/: readme.md
airdrop2/src/: lib.rs
anchor-escrow/: Anchor.toml
anchor-vault/: package-lock.json
anchor-vault/programs/anchor-vault/src/: lib.rs
anchor-vault/runbooks/: README.md
anchor-vault/tests/: anchor-vault.ts
capstone/anchor-program/: Anchor.toml  package-lock.json  package.json
capstone/anchor-program/runbooks/: README.md
capstone/anchor-program/tests/: degen-decks.ts
mplxcore-starter/: Anchor.toml
solana-starter/ts/: package-lock.json  package.json
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts  vault_init.ts
(+34 files in other folders)
